--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/dayjs": "^1.4.1",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.0",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
     "pinia": "^2.1.7",
-    "@nuxtjs/dayjs": "^1.4.1"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.36",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
     "@types/lodash": "^4.14.202",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.2",
     "vue-tsc": "^1.8.27"
   }
 }
